--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   flutter_launcher_icons: ^0.14.4
   ntp: ^2.0.0
-  safe_device: ^1.3.8
+  # safe_device: ^1.3.8
 
 dev_dependencies:
   flutter_test:
