--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,9 +66,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   ntp: ^2.0.0
   go_router: ^16.3.0
-  # social_sharing_plus: ^1.2.3
+  social_sharing_plus: ^1.2.3
   screenshot: ^3.0.0
-  social_sharing:
   # safe_device: ^1.3.8
 
 dev_dependencies:
