--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,21 @@
     </queries>
 
 
+    <queries>
+        <!-- Query for Facebook -->
+        <package android:name="com.facebook.katana" />
+        <!-- Query for Twitter -->
+        <package android:name="com.twitter.android" />
+        <!-- Query for LinkedIn -->
+        <package android:name="com.linkedin.android" />
+        <!-- Query for Reddit -->
+        <package android:name="com.reddit.frontpage" />
+        <!-- Query for WhatsApp -->
+        <package android:name="com.whatsapp" />
+        <!-- Query for Telegram -->
+        <package android:name="org.telegram.messenger" />
+    </queries>
+    
 
     <application
         android:label="Domandito"
