--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.0.0+5
+version: 1.0.0+10
 
 environment:
   sdk: ^3.9.0
@@ -83,6 +83,7 @@ flutter:
     - assets/icons/
     - assets/fonts/
     - assets/languages/
+    - shorebird.yaml
 
   fonts:
 
