--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.0.0+10
+version: 1.0.0+11
 
 environment:
   sdk: ^3.9.0
@@ -68,6 +68,7 @@ dependencies:
   # go_router: ^16.3.0
   social_sharing_plus: ^1.2.3
   screenshot: ^3.0.0
+  image_cropper: ^11.0.0
   # safe_device: ^1.3.8
 
 dev_dependencies:
