--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   bloc: ^9.0.0
   # glass: ^2.0.0+2
   # location: ^8.0.1
-  uuid: ^4.5.1
+  uuid: ^4.5.2
   internet_connection_checker: ^3.0.1
   # blur: ^4.0.2
   sign_in_with_apple: ^7.0.1
@@ -69,6 +69,7 @@ dependencies:
   social_sharing_plus: ^1.2.3
   screenshot: ^3.0.0
   image_cropper: ^11.0.0
+  supabase_flutter: ^2.12.0
   # safe_device: ^1.3.8
 
 dev_dependencies:
