--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   screenshot: ^3.0.0
   image_cropper: ^11.0.0
   supabase_flutter: ^2.12.0
+  flutter_dotenv: ^6.0.0
   # safe_device: ^1.3.8
 
 dev_dependencies:
@@ -86,6 +87,7 @@ flutter:
     - assets/fonts/
     - assets/languages/
     - shorebird.yaml
+    - .env
 
   fonts:
 
