--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   image_cropper: ^11.0.0
   supabase_flutter: ^2.12.0
   flutter_dotenv: ^6.0.0
+  flutter_app_badger: ^1.5.0
   # safe_device: ^1.3.8
 
 dev_dependencies:
