--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.0.1+18
+version: 1.0.2+20
 
 environment:
   sdk: ^3.9.0
@@ -72,6 +72,11 @@ dependencies:
   supabase_flutter: ^2.12.0
   flutter_dotenv: ^6.0.0
   flutter_app_badger: ^1.5.0
+  cached_video_player_plus: ^4.1.0
+  video_compress: ^3.1.3
+  video_thumbnail: ^0.5.3
+  video_player: ^2.10.1
+  chewie: ^1.13.0
   # safe_device: ^1.3.8
 
 dev_dependencies:
