--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,8 +76,8 @@ dependencies:
   video_compress: ^3.1.3
   video_thumbnail: ^0.5.3
   video_player: ^2.10.1
-  chewie: ^1.13.0
-  # safe_device: ^1.3.8
+  # chewie: ^1.13.0
+  ai_glow: ^0.0.2
 
 dev_dependencies:
   flutter_test:
